[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veilchain"
version = "0.1.0"
description = "Official Python SDK for VeilChain - Append-only Merkle tree ledger service"
readme = "README.md"
license = "MIT"
authors = [
    { name = "VeilChain", email = "sdk@veilchain.io" }
]
keywords = [
    "veilchain",
    "merkle",
    "ledger",
    "append-only",
    "blockchain",
    "audit",
    "verification",
    "cryptography"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed"
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0"
]

[project.urls]
Homepage = "https://veilchain.io"
Documentation = "https://docs.veilchain.io"
Repository = "https://github.com/veilchain/veilchain"

[tool.hatch.build.targets.wheel]
packages = ["veilchain"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
